--- a/frontend/views/adminpage.html
+++ b/frontend/views/adminpage.html
@@ -197,13 +197,17 @@
     }
     
     @media only screen and (max-width: 760px),
-    (min-device-width: 768px) and (max-device-width: 1024px) {
+    (min-device-width: 768px) and (max-device-width: 970px) {
         td input[type="text"] {
             margin-top: 0px;
         }
         /* .paragraph {
             margin-top: 25px;}
  */
+    .paragraph{
+        margin-left: 10px !important;
+    }
+
         .details {
             margin-left: 20px;
         }
