--- a/frontend/views/bookingsAdmin.html
+++ b/frontend/views/bookingsAdmin.html
@@ -20,10 +20,10 @@
                 </table>
 
                 <script type="text/ng-template" id="display">
-                <td style="width:auto;" class="details"><p class="paragraph my-auto">{{info.movie}}</p></td>
+                <td style="width:auto;" class="details"><p class="paragraph my-auto">{{info.movieTitle}}</p></td>
                 <td style="width:auto;" class="details"><p class="paragraph my-auto">{{info.date}}</p></td>
                 <td style="width:auto;" class="details"><p class="paragraph my-auto">{{info.time}}</p></td>
-                <td style="width:auto;" class="details"><p class="paragraph my-auto">{{info.seats}}</p></td>
+                <td style="width:auto;" class="details"><p class="paragraph my-auto">{{info.seatsBooked}}</p></td>
                 <td style="width:auto;" class="details"><p class="paragraph my-auto">{{info.userId}}</p></td>
                 
                 
