--- a/frontend/views/booking.html
+++ b/frontend/views/booking.html
@@ -310,7 +310,7 @@
 
 
 <div ng-if="isConfirmed()">
-    <div class="container mt-5 mb-5 d-flex flex-row" style="border: black 10px double">
+    <div class="container mt-5 mb-5 displaying" style="border: black 10px double">
     <div class="col-md-6">
         <div class="row text-center d-flex flex-column mt-5 mb-5">
         <div class="col-md-10 mx-auto text-left">
@@ -323,7 +323,7 @@
             <p class="confirmation"><strong style="color: red"> No. of tickets : </strong> {{nrSeats}}</p>
         </div>
         <div class="col-md-10 mx-auto text-left">
-            <p class="confirmation"><strong style="color: red"> Seats chosen :</strong> {{selection.join(", ")}}</p>
+            <p class="confirmation"><strong style="color: red"> Seats chosen :</strong> {{selectedSeats.join(", ")}}</p>
         </div>
         <div class="col-md-10 mx-auto text-left">
             <p class="confirmation"> <strong style="color: red">Total price:</strong> {{5*nrSeats}}$</p>
@@ -349,6 +349,15 @@
     font-size:25px;
     color: black;
     font-weight:bold;
+}
+.displaying{
+    display:flex;
+    flex-direction:row;
+}
+@media only screen and (max-width: 600px){
+.displaying{
+    flex-direction:column;
+}
 }
 
 </style>
