--- a/frontend/views/adminpage.html
+++ b/frontend/views/adminpage.html
@@ -5,6 +5,7 @@
     
     .latime {
         width: 80px;
+        margin-left:20px;
     }
     
     .btn-add {
@@ -23,16 +24,17 @@
     <div class="continut flex-column">
         <div class="container mx-auto ">
             <div ng-controller="admin">
-                <table class="table table-hover" role="table">
-                    <thead role="rowgroup">
-                        <tr role="row">
-                            <th role="columnheader" style="width:10%;">Title</th>
-                            <th role="columnheader" style="width:10%;">Date</th>
-                            <th role="columnheader" style="width:10%;">Time</th>
-                            <th role="columnheader" style="width:10%;">Room</th>
-                            <th role="columnheader" style="width:10%;">Actors</th>
-                            <th role="columnheader" style="width:10%;">Year</th>
-                            <th role="columnheader" style="width:25%;">Description</th>
+                <table class="table table-hover">
+                    <thead >
+                        <tr>
+                            <th >Title</th>
+                            <th >Date</th>
+                            <th >Time</th>
+                            <th >Room</th>
+                            <th >Actors</th>
+                            <th >Year</th>
+                            <th >Description</th>
+                            <th ></th>
                         </tr>
                     </thead>
                     <tbody role="rowgroup">
@@ -60,20 +62,18 @@
                     <td style="width:auto;" class="details">
                         <p class="paragraph my-auto">{{movie.year}}</p>
                     </td>
-                    <td style="height:auto;" class="details">
+                    <td style="height:auto;padding-left:10px;" class="details description-display">
                         <div style="width:auto;height:auto;word-wrap: break-word; text-align: justify;
                     text-justify: inter-word;" class="details">
-                            <p class="paragraph">{{movie.description}}</p>
+                            <p class="paragraph desc">{{movie.description}}</p>
                         </div>
 
                     </td>
-                    <td>
+                    <td colspan="2" style="display:flex; padding-left:20px ">
                         <button class="btn btn-dark latime" ng-click="editMovie(movie)">Edit</button>
+                          <button class="btn btn-danger latime" ng-click="deleteMovie($index)">Delete</button>
                     </td>
-                    <td>
-                        <button class="btn btn-danger latime" ng-click="deleteMovie($index)">Delete</button>
-
-                    </td>
+                    
 
                 </script>
                 <script type="text/ng-template" id="edit">
@@ -83,14 +83,13 @@
                     <td><input type="text" style="width:90%" ng-model="model.selected.room" /></td>
                     <td><input type="text" style="width:90%" ng-model="model.selected.actors" /></td>
                     <td><input type="text" style="width: 90%" ng-model="model.selected.year" /></td>
-                    <td><input type="text" style="width: 90%" ng-model="model.selected.description" /></td>
+                    <td class="description-modif"><input type="text" style="width: 90%" ng-model="model.selected.description" /></td>
 
-                    <td>
+                    <td colspan="2" style="display:flex;">
                         <button class="btn btn-info latime" ng-click="saveMovie(model.selected)">Save</button>
+                            <button class="btn btn-danger latime" ng-click="reset()">Cancel</button>
                     </td>
-                    <td>
-                        <button class="btn btn-danger latime" ng-click="reset()">Cancel</button>
-                    </td>
+                    
                 </script>
 
 
@@ -166,9 +165,6 @@
 	Max width before this PARTICULAR table gets nasty. This query will take effect for any screen smaller than 760px and also iPads specifically.
     */
     
-    td input[type="text"] {
-        margin-top: 25px;
-    }
     
     .movie-image {
         width: 60px;
@@ -197,16 +193,26 @@
     }
     
     @media only screen and (max-width: 760px),
-    (min-device-width: 768px) and (max-device-width: 970px) {
+    (min-device-width: 768px) and (max-device-width: 990px) {
+        
         td input[type="text"] {
             margin-top: 0px;
         }
         /* .paragraph {
             margin-top: 25px;}
  */
+ .latime{
+     margin-bottom:15px;
+ }
     .paragraph{
         margin-left: 10px !important;
     }
+    .desc{
+            margin-left:auto !important;
+            margin-right:20px;
+            width:60%;
+
+        }
 
         .details {
             margin-left: 20px;
@@ -224,6 +230,7 @@
         td,
         tr {
             display: block;
+
         }
         /* Hide table headers (but not display: none;, for accessibility) */
         thead tr {
@@ -232,13 +239,14 @@
             left: -9999px;
         }
         .table td {
-            padding-left: 165px;
+            padding-left: 100px;
             padding-top: 1px;
             padding-right: 1px;
             padding-bottom: 1px;
         }
         tr {
             margin: 0 0 1rem 0;
+            border-bottom: 2px dashed black !important;
         }
         td {
             border: none;
@@ -250,7 +258,7 @@
             position: absolute;
             top: 0;
             left: 6px;
-            width: 45%;
+        
             padding-right: 10px;
             white-space: nowrap;
         }
@@ -258,40 +266,53 @@
 		Label the data
     You could also use a data-* attribute and content for this. That way "bloats" the HTML, this way means you need to keep HTML and CSS in sync. Lea Verou has a clever way to handle with text-shadow.
 		*/
-        .title-display:before {
+       td.title-display:before {
             content: "Title";
+            font-weight:bold;
             color: black;
             margin-top: 25px;
         }
-        .title-resp:before {
+        td.title-resp:before {
             content: "Title";
             color: black;
             margin-top: 0px;
+            font-weight:bold;
         }
+
+
         td:nth-of-type(2):before {
             content: "Date";
             color: black;
+            font-weight:bold;
         }
         td:nth-of-type(3):before {
             content: "Time";
             color: black;
+            font-weight:bold;
         }
         td:nth-of-type(4):before {
             content: "Room";
             color: black;
+            font-weight:bold;
         }
         td:nth-of-type(5):before {
             content: "Actors";
             color: black;
+            font-weight:bold;
         }
         td:nth-of-type(6):before {
             content: "Year";
             color: black;
+            font-weight:bold;
         }
-        td:nth-of-type(7):before {
+       td:nth-of-type(7):before {
             content: "Description";
             color: black;
-        }
+            margin-left: -10px;
+      
+            font-weight:bold;
+        } 
+       
     }
     
     td:nth-of-type(8):before {
