booking seats sep

--- a/frontend/views/partials/shared/navbar.html
+++ b/frontend/views/partials/shared/navbar.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="/index.html#!/adminpage"><i class="fa fa-edit"></i> Edit </a>
                     </li>
                     <li ng-if="isUserAdmin()" class="nav-item mystyle" ng-class="{'active': isCurrentRoute('/bookingsAdmin')}">
-                        <a class="nav-link" href="/index.html#!/bookingsAdmin"><i class="fa fa-edit"></i>Bookings</a>
+                        <a class="nav-link" href="/index.html#!/bookingsAdmin"><i class="fa fa-clipboard"></i>Bookings</a>
                     </li>
                     <li class="nav-item mystyle">
                      
