--- a/frontend/views/booking.html
+++ b/frontend/views/booking.html
@@ -141,7 +141,7 @@
         width: 40px;
         height: 40px;
         margin-right: 10px;
-        float: left;
+    
     }
     
     .Displaytable {
@@ -173,9 +173,31 @@
     .top-margin {
         margin-top: 40px;
     }
-    
+    .hide{
+        display:none;
+    }
+    @media only screen and (max-width:770px){
+      .show{
+            display:none;
+        }
+      .hide{
+          display:flex;
+      }
+      .legend{
+          text-align:center;
+      }
+      .btn-choice{
+          margin-left:-13px;
+      }
+    }
     @media only screen and (max-width: 760px),
     (min-device-width: 768px) and (max-device-width: 1024px) {
+        .first-half{
+            margin-right:0px!important;
+        }
+        .second-half{
+            margin-left:0px !important;
+        }
         /* Force table to not be like tables anymore */
         table,
         thead,
@@ -256,21 +278,22 @@
 <div class="row bg-book" ng-if="!isConfirmed()" style="margin: 0px">
     <div class="col-md-3 top-margin">
         <div class="row mt-3 d-flex flex-column">
-            <div class="col-md-6 mx-auto">
-                <p for="seatsLeft" id="white">Movie : {{bookMovie.title}}</p>
+            <div class="col-md-10 mx-auto text-center">
+                <p  id="white">Movie : {{bookMovie.title}}</p>
             </div>
-            <div class="col-md-6 mx-auto">
-                <p for="seatsLeft" id="white">Date : {{bookMovie.date}} </p>
+            <div class="col-md-10 mx-auto text-center">
+                <p  id="white">Date : {{bookMovie.date}} </p>
             </div>
-            <div class="col-md-6 mx-auto">
-                <p for="seatsLeft" id="white">Time : {{bookMovie.time}}</p>
+            <div class="col-md-10 mx-auto text-center">
+                <p id="white">Time : {{bookMovie.time}}</p>
             </div>
-             <div class="col-md-6 mx-auto">
-                <p for="seatsLeft" id="white">Ticket price : 5$</p>
+             <div class="col-md-10 mx-auto text-center">
+                <p id="white">Ticket price : 5$</p>
             </div>
-            <div class="col-md-6 mx-auto mb-3">
+            <div class="col-md-10 mx-auto text-center mb-3 show">
                 <button class="btn cta proceed" ng-click="storeSeat()">Confirm</button>
             </div>
+            
         </div>
     </div>
     <div class=" col-md-6 top-margin">
@@ -283,28 +306,45 @@
                     </td>
                 </tr>
                 <tr ng-repeat="row in seats" class="row">
-                    <td class="SRow1">
-                        <div class="itemSeat d-flex flex-row" ng-repeat="seat in row">
+                    <td class="SRow1 first-half">
+                        <div class="itemSeat d-flex flex-row" ng-repeat="seat in row|limitTo:5">
                             <a ng-class="{'selected': seat.check, 'available': (!seat.check && seat.free),  'blocked': !seat.free}" ng-click="selectSeat(seat)">{{seat.seat_no}}</a>
                         </div>
                     </td>
-                </tr>
+            
+            
+                <td style="padding:unset"><div style="width:20px; height:100%">
+                </div>
+                </td>
+                
+              
+                 <td class="SRow1 second-half">
+                        <div class="itemSeat d-flex flex-row" ng-repeat="seat in row|limitTo: (5 - 10)">
+                            <a ng-class="{'selected': seat.check, 'available': (!seat.check && seat.free),  'blocked': !seat.free}" ng-click="selectSeat(seat)">{{seat.seat_no}}</a>
+                        </div>
+                    </td>
+                    </tr>
             </table>
         </div>
     </div>
-    <div class="col-md-3 d-flex flex-column my-auto">
-        <div class="legend" style="margin-bottom: 20px;">
-            <button type="button" class="btn btn-danger btn-legend "></button>
-            <p style="overflow: hidden;color:white">Reserved Seat</p>
+    <div class="col-md-3 d-flex flex-column my-auto show">
+        <div class="legend " style="margin-bottom: 20px;">
+        
+          
+            <p style="overflow: hidden;color:white">  <button type="button" class="btn btn-danger btn-legend "></button>Reserved Seat</p>
+      
         </div>
-        <div class="legend" style="margin-bottom: 20px;">
-            <button type="button" class="btn btn-success btn-legend "></button>
-            <p style="color:white;">Available Seat</p>
+        <div class="legend " style="margin-bottom: 20px;">
+            
+            <p style="color:white;"><button type="button" class="btn btn-success btn-legend "></button>Available Seat</p>
         </div>
-        <div class="legend" style="margin-bottom: 20px;">
-            <button type="button" class="btn btn-warning btn-legend"></button>
-            <p style="color:white">Your Choice</p>
+        <div class="legend " style="margin-bottom: 20px;">
+           
+            <p style="color:white"> <button type="button" class="btn btn-warning btn-legend btn-choice"></button>Your Choice</p>
         </div>
+         <div class="col-md-10 mx-auto mb-3 justify-content-center hide">
+                <button class="btn cta proceed" ng-click="storeSeat()">Confirm</button>
+            </div>
     </div>
 </div>
 
