--- a/frontend/views/partials/modals/confirmation.html
+++ b/frontend/views/partials/modals/confirmation.html
@@ -1,3 +1,4 @@
+<div>
 <div ng-controller="bookingController">
     <div class="container mt-5 mb-5 displaying" style="border: black 10px double">
     <div class="col-md-6">
@@ -12,7 +13,7 @@
             <p class="confirmation"><strong style="color: red"> No. of tickets : </strong> {{nrSeats}}</p>
         </div>
         <div class="col-md-10 mx-auto text-left">
-            <p class="confirmation"><strong style="color: red"> Seats chosen :</strong> {{selectedSeats.join(',')}}</p>
+            <p class="confirmation"><strong style="color: red"> Seats chosen :</strong> {{booking.seatsBooked}}</p>
         </div>
         <div class="col-md-10 mx-auto text-left">
             <p class="confirmation"> <strong style="color: red">Total price:</strong> {{5*nrSeats}}$</p>
@@ -30,4 +31,5 @@
         
         </div>
     </div>
+</div>
 </div>
