--- a/frontend/views/booking.html
+++ b/frontend/views/booking.html
@@ -253,7 +253,7 @@
     }
 </style>
 
-<div class="row bg-book" ng-if="!isConfirmed()" style="margin: 0px">
+<div class="row bg-book"  style="margin: 0px">
     <div class="col-md-3 top-margin">
         <div class="row mt-3 d-flex flex-column">
             <div class="col-md-6 mx-auto">
@@ -269,7 +269,7 @@
                 <p for="seatsLeft" id="white">Ticket price : 5$</p>
             </div>
             <div class="col-md-6 mx-auto mb-3">
-                <button class="btn cta proceed" ng-click="storeSeat()">Confirm</button>
+                <button class="btn cta proceed" ng-disabled="noSeat()" title=" You haven't selected any seats!" ng-click="storeSeat()">Confirm</button>
             </div>
         </div>
     </div>
@@ -315,17 +315,8 @@
 .confirmation{
     font-family: 'Indie Flower',cursive;
     font-size:25px;
-    color: black;
+    color:white;
     font-weight:bold;
-}
-.displaying{
-    display:flex;
-    flex-direction:row;
-}
-@media only screen and (max-width: 600px){
-.displaying{
-    flex-direction:column;
-}
 }
 
 </style>
