--- a/frontend/views/partials/modals/moviedetails.html
+++ b/frontend/views/partials/modals/moviedetails.html
@@ -2,7 +2,7 @@
     <div>
         <div class="row">
             <!-- Modal Header -->
-            <div class="col-md-6">
+            <div class="col-md-6 text-center">
                 <img ng-src="../../../images/{{movie.src}}" class="mx-auto movie-modal-details" >
             </div>
             <!-- Modal body -->
@@ -30,11 +30,7 @@
             height:70%;
             margin-top:40px;
         }
-        .mx-auto{
-            margin-left:50px !important;
-            margin-right: unset;
-
-        }
+      
         .details-responsive{
             width:80%;
             margin-top: -80px !important;
