--- a/frontend/views/partials/modals/confirmation.html
+++ b/frontend/views/partials/modals/confirmation.html
@@ -1,7 +1,8 @@
-<div>
-<div ng-controller="bookingController">
-    <div class="container d-flex flex-column" style="background-color: black">
-    <div class="col-md-12">
+<div id="confirm" class="ngdialog-holder">
+<div class="conf-coontent">
+<div class="ngdialog-header"></div>
+<div class="modal-body" style="background-color: black">
+  <div class="col-md-12">
         <div class="row text-center d-flex flex-column ">
                 <div class="col-md-12 mx-auto">
                         <img src="../../images/verif.png" style="height:100px;width:100px">
@@ -18,11 +19,6 @@
            
         </div>
         </div>
-        </div>
-
-     
-        
-        </div>
-    </div>
+</div>
 </div>
 </div>
