--- a/frontend/views/movies.html
+++ b/frontend/views/movies.html
@@ -1,17 +1,10 @@
 <div class="continut bg-gray height mt-5">
     <div class="wrapper-movies flex-column mx-auto col-md-9">
         <div class="row flex-column justify-content-center">
-
             <div class="form-group col-md-12 text-center mb-5">
-              
-             
-
-
                     <div class="control col-md-12 text-center mx-auto">
                         <label for="date-birth" class="date-select">Select a date</label>
                         <input id="date-birth"  type="date" class="form-control" style="width:200px" ng-model="movieDate"></div>
-
-               
             </div>
         </div>
 
@@ -34,7 +27,7 @@
                         </td>
                         </td>
                         <td style="width:auto;">
-                            <p class="movie-title movie-attr">{{movie.time}}</p>
+                            <p class="movie-title movie-attr">{{movie.newMovieSchedule[0].time}}</p>
                          
                         </td>
 
