--- a/frontend/views/movies.html
+++ b/frontend/views/movies.html
@@ -15,7 +15,6 @@
                     <tr>
                         <th>Movie</th>
                         <th>Start hour</th>
-                        <th>Room</th>
                         <th></th>
                         <th></th>
                     </tr>
@@ -29,10 +28,6 @@
                         <td style="width:auto;">
                             <p class="movie-title movie-attr">{{movie.newMovieSchedule[0].time}}</p>
                          
-                        </td>
-
-                        <td style="width:auto;">
-                            <p class="movie-title movie-attr">{{movie.room}}</p>
                         </td>
                         <td colspan="2" style="padding-left:50px"><button class="btn btn-about" ng-click="openMovieDetails(movie.id)">About</button>
                         <button class="btn btn-book" ng-disabled="!isUserLogged()" ng-click="bookMovie(movie.id)" title="You have to be logged in !">Book</button></td>
@@ -116,7 +111,10 @@
         }
         tr {
             margin: 0 0 1rem 0;
-               border-top: 2px solid black;
+            border-top: 2px solid black;
+            border-bottom: 2px solid black;
+            border-left: 2px solid black;
+            border-right: 2px solid black;
         }
         td {
             /* Behave  like a "row" */
@@ -153,13 +151,8 @@
             color:white;
             margin-top:25px;
         }
+       
         td:nth-of-type(3):before {
-            content: "Room";
-            margin-left: -25px;
-            color:white;
-             margin-top:25px;
-        }
-        td:nth-of-type(4):before {
             content: "";
         }
        /*  td:nth-of-type(5):before {
