--- a/frontend/views/booking.html
+++ b/frontend/views/booking.html
@@ -278,13 +278,13 @@
     <div class="col-md-3 top-margin">
         <div class="row mt-3 d-flex flex-column">
             <div class="col-md-10 mx-auto text-center">
-                <p  id="white">Movie : {{bookMovie.title}}</p>
+                <p  id="white">Movie : {{titlu}}</p>
             </div>
             <div class="col-md-10 mx-auto text-center">
-                <p  id="white">Date : {{bookMovie.date}} </p>
+                <p  id="white">Date : {{data}} </p>
             </div>
             <div class="col-md-10 mx-auto text-center">
-                <p id="white">Time : {{bookMovie.time}}</p>
+                <p id="white">Time : {{timp}}</p>
             </div>
              <div class="col-md-10 mx-auto text-center">
                 <p id="white">Ticket price : 5$</p>
